--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,8 @@ dependencies {
     def lifecycle_version = "1.1.1"
     def room_version = "1.1.1"
     def paging_version = "1.0.1"
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    def retrofit_version = "2.4.0"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:28.0.0'
@@ -40,5 +41,7 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
     // Paging
     implementation "android.arch.paging:runtime:$paging_version"
-
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 }
